--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 html, body {
     height: 100%; 
     margin: 0;
@@ -23,7 +22,8 @@ body {
     z-index: 1;
 }
 
-.notas-contenedor{
+/* NOTAS */
+.notas-contenedor {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
@@ -32,13 +32,18 @@ body {
     position: relative;
     top: 0px;
     z-index: 2;
+    margin-top: 100px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .notas-recipiente {
-    text-decoration: none
+    text-decoration: none;
 }
 
-
+/* MAIN */
 main {
     max-width: 800px;
     margin: 20px auto;
@@ -50,6 +55,10 @@ main {
     position: relative;
     z-index: 5;
     display: block;
+
+    animation-name: despliegue;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
 }
 
 section {
@@ -64,8 +73,10 @@ form {
 label {
     display: block;
     margin-bottom: 5px;
+    margin-top: 15px;
+    font-weight: bold;
+    color: #666;
 }
-
 
 textarea {
     width: 100%;
@@ -85,7 +96,7 @@ input[type="submit"] {
     text-decoration-color: #000000;
 }
 
-
+/* ICONOS APPS */
 .ico {
     width: 5%;
     height: auto;
@@ -104,17 +115,7 @@ a img {
     vertical-align: middle;
 }
 
-.notas-contenedor {
-    margin-top: 100px;
-    width: 600px;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    display: block;
-}
-
-
+/* APPS */
 .apps-contenedor1 {
     margin-top: 20px;
     width: 800px;
@@ -128,7 +129,7 @@ a img {
     width: 800px;
 }
 
-select{
+select {
     margin-bottom: 15px;
 }
 
@@ -136,33 +137,19 @@ hr {
     color: #000000;
 }
 
+/* BOTÓN AJUSTES */
 .settings-button:hover {
     background-color: #555;
 }
 
-.settings-content {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 300px;
-    height: 100%;
-    background-color: #444444;
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    z-index: 1000;
+.settings-button {
+    cursor: pointer;
+    top: 0px;
+    right: 0px;
+    visibility: hidden;
 }
 
-.settings-content h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.settings-content p {
-    font-size: 16px;
-}
-
-.cont-svg{
+.cont-svg {
     top: 8px;
     right: 5px;
     width: 55px;
@@ -172,27 +159,20 @@ hr {
     border-radius: 10px;
 }
 
-.cont-svg:hover{
+.cont-svg:hover {
     background-color: #b8b8b846;
 }
-
-.settings-button {
-	cursor: pointer;
-	top: 0px;
-	right: 0px;
-    visibility: hidden;
-}
-
 
 .settings-button .objeto {
     right: 3px;
     width: 50px;
     height: 50px;
-    fill: rgb(255, 255, 255); 
+    fill: rgb(255, 255, 255);
     position: absolute;
     visibility: visible;
 }
-  
+
+/* PANEL SETTINGS */
 .settings-content {
     background-color: #444444;
     border: 1px solid #2e2e2e;
@@ -202,27 +182,29 @@ hr {
     width: 300px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
-    max-height: 800px; 
-    overflow-y: auto; 
+    max-height: 800px;
+    overflow-y: auto;
     position: fixed;
-    z-index: 999; 
+    z-index: 999;
     display: none;
     overflow: auto;
+
+    top: 0;
+    right: 0;
+    height: 100%;
 }
 
 .settings-content h2 {
     font-size: 24px;
     margin-top: 10px;
     margin-bottom: 20px;
-    color: #333;
     text-align: center;
+    color: #fff;
 }
 
-label {
-    display: block;
-    margin-top: 15px;
-    font-weight: bold;
-    color: #666;
+.settings-content p {
+    font-size: 16px;
+    color: #fff;
 }
 
 input[type="color"],
@@ -232,8 +214,10 @@ select {
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    border-color: #ccc;
 }
 
+/* BOTONES */
 button {
     background-color: #007BFF;
     color: #fff;
@@ -244,6 +228,7 @@ button {
     border-radius: 5px;
     font-weight: bold;
 }
+
 button:hover {
     background-color: #004880;
 }
@@ -255,18 +240,15 @@ button:hover {
     background-color: #196b2b;
 }
 
-
 #exit-settings {
     background-color: #ff0707;
     margin-top: 30px;
 }
-
 #exit-settings:hover {
-  background-color: #8f0101;
+    background-color: #8f0101;
 }
 
-
-
+/* WIDGET TIEMPO */
 #weather {
     font-family: 'Roboto', sans-serif;
     font-size: 1.2em;
@@ -282,7 +264,7 @@ button:hover {
     right: 80px;
 }
 
-#weather:hover{
+#weather:hover {
     background-color: #b8b8b846;
 }
 
@@ -302,6 +284,7 @@ button:hover {
     right: 57px;
 }
 
+/* ANIMACIONES */
 @keyframes despliegue {
     0%    {height: 0; opacity: 0;}
     5%    {height: auto; opacity: 0.05;}
@@ -324,53 +307,43 @@ button:hover {
     90%   {height: auto; opacity: 0.9;}
     95%   {height: auto; opacity: 0.95;}
     100%  {height: auto; opacity: 1;}
-  }
-  
-
+}
 
 @keyframes despliegue-barra {
-    0%{margin-top: 0px;}
+    0% {margin-top: 0px;}
     100% {margin-top: 90px;}
 }
 
-main {
-    animation-name: despliegue;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in-out;
+@keyframes despliegueLateral {
+    0% {margin-left: 0px;}
+    100% {margin-left: 150px;}
 }
 
-@keyframes despliegueLateral{
-      0% {margin-left: 0px;}
-      100% {margin-left: 150px;}
-}
-
+/* OVERLAY */
 .overlay {
-    display: none;
+    display: block;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
-    z-index: 1; 
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
 
 .contenido-centrado {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
     border-radius: 5px;
-    z-index: 2; 
+    z-index: 2;
     text-align: center;
 }
 
-.overlay {
-    display: block;
-}
-
+/* BUSCADOR */
 .centro {
     height: 100vh;
     display: flex;
